; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_mdc2_internal_test.c_test_mdc2.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_mdc2_internal_test.c_test_mdc2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@MDC2_DIGEST_LENGTH = common dso_local global i32 0, align 4
@tests = common dso_local global %struct.TYPE_3__* null, align 8
@.str = private unnamed_addr constant [32 x i8] c"mdc2 test %d: unexpected output\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @test_mdc2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_mdc2(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %9 = load i32, i32* @MDC2_DIGEST_LENGTH, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %4, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %5, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** @tests, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i64 %15
  %17 = bitcast %struct.TYPE_3__* %7 to i8*
  %18 = bitcast %struct.TYPE_3__* %16 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %17, i8* align 8 %18, i64 16, i1 false)
  %19 = call i32 @MDC2_Init(i32* %6)
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = inttoptr i64 %21 to i8*
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @strlen(i64 %24)
  %26 = call i32 @MDC2_Update(i32* %6, i8* %22, i32 %25)
  %27 = getelementptr inbounds i8, i8* %12, i64 0
  %28 = call i32 @MDC2_Final(i8* %27, i32* %6)
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load i32, i32* @MDC2_DIGEST_LENGTH, align 4
  %32 = load i32, i32* @MDC2_DIGEST_LENGTH, align 4
  %33 = call i32 @TEST_mem_eq(i32 %30, i32 %31, i8* %12, i32 %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %38, label %35

35:                                               ; preds = %1
  %36 = load i32, i32* %3, align 4
  %37 = call i32 @TEST_info(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %36)
  store i32 0, i32* %2, align 4
  store i32 1, i32* %8, align 4
  br label %39

38:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  store i32 1, i32* %8, align 4
  br label %39

39:                                               ; preds = %38, %35
  %40 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %40)
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @MDC2_Init(i32*) #3

declare dso_local i32 @MDC2_Update(i32*, i8*, i32) #3

declare dso_local i32 @strlen(i64) #3

declare dso_local i32 @MDC2_Final(i8*, i32*) #3

declare dso_local i32 @TEST_mem_eq(i32, i32, i8*, i32) #3

declare dso_local i32 @TEST_info(i8*, i32) #3

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
